--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -18,7 +18,7 @@
         {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
-                <td>{{ user.Name }}</td>
+                <td>{{ user.username }}</td>
                 <td>{{ user.password }}</td>
                 <td>
                     <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
