--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,5 +1,7 @@
 body {
   //  background: blue!important;
 }
-
+@import '/variables/layout';
+@import '/layout/app';
+@import '/layout/header';
 @import '/typography/typography';
