--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,11 +4,21 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+
         <link rel="stylesheet" href="{{ asset('build/app.css') }}">
 
 {% endblock %}
     </head>
     <body>
+
+
+
+    {% block navigation %}
+
+    {% include 'layout/navigation.html.twig' %}
+
+    {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}
         <script src="{{ asset('build/app.js') }}"></script>
