--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,12 @@
     {% include 'layout/navigation.html.twig' %}
 
     {% endblock %}
-        {% block body %}{% endblock %}
+    <div class="container">
+
+        {% block body %}
+
+    {% endblock %}
+        </div>
         {% block javascripts %}
         <script src="{{ asset('build/app.js') }}"></script>
         {% endblock %}
