--- a/assets/sass/layout/_app.scss
+++ b/assets/sass/layout/_app.scss
@@ -1,10 +1,24 @@
 body{
   font-family: 'Roboto', sans-serif;
+  background:white;
 
 }
-button{
-  background: lightgreen;
+button, input[type='submit']{
+  background: $secondary-color;
   border:none;
-  border:1px solid darkgreen;
+  color:white;
   text-transform: uppercase;
+  padding: 10px 15px;
+
+}
+.container{
+  margin-top: 80px;
+  max-width: $max-width;
+  margin:100px auto;
+  text-align: center;
+  .logo{
+    margin: 0 auto;
+    max-width: 200px;
+  }
+
 }
