--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -2,18 +2,19 @@ header{
   display: flex;
   width: 100%;
   background:$primary-color;
-  padding-top: 20px ;
   border-bottom:1px solid #eeeeee;
   position: fixed;
+  align-items: center;
   top:0;
   z-index: 2;
+  height: 80px;
   nav{
-    font-size: 13px;
+    font-size: 15px;
     text-transform: uppercase;
     width: $max-width;
     display: flex;
     margin: 0 auto;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     a{
       text-decoration: none;
@@ -21,13 +22,29 @@ header{
       display: block;
 
     }
+    .nav-right{
+      a{
+        float: right;
+      }
+    }
+    .nav-center,.nav-right{
+      width: 100%;
+    }
     .nav-left{
+      display: flex;
+      align-items: center;
+      .logo_small{
+        max-width: 50px;
+        margin-right: 20px;
+      }
+
         width: 100%;
+
       .dropdown{
         position: relative;
         width: 100%;
         >a{
-          padding-bottom: 20px;
+
 
 
         }
@@ -52,7 +69,7 @@ header{
               padding-left: 20px;
               padding-right: 20px;
                   &:hover{
-                    font-weight: bold;
+
                   }
               &:first-child{
                 padding-top: 20px;
