--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,20 +9,25 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
+  <img class="logo" src=" {{asset('build/images/lock.gif')}}">
+
+<form id='login' action="{{ path("fos_user_security_check") }}" method="post">
 
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
+    <label for="username">{{ 'username'|trans }}</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
+    <label for="password">{{ 'password'|trans }}</label>
     <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
     <input type="hidden" name="_csrf_token"
       value="{{ csrf_token('authenticate') }}"
   >
+  <span>
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    <label for="remember_me">{{ 'se souvenir de moi'|trans }}</label>
+  </span>
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+      <input type="submit" id="_submit" name="_submit" value="{{ 'Connexion'|trans }}" />
+
 </form>
 {% endblock body %}
