--- a/assets/sass/variables/_layout.scss
+++ b/assets/sass/variables/_layout.scss
@@ -1,5 +1,5 @@
 $primary-color: #f7f7f7;
-$secondary-color:#3E9BF9;
-$accent-color:#F8B500;
+$secondary-color:#6699CC;
+$accent-color:#F6B519;
 $max-width:1200px;
 $dark-color:darkgrey;
