--- a/templates/layout/navigation.html.twig
+++ b/templates/layout/navigation.html.twig
@@ -6,7 +6,7 @@
   <nav>
     {% if app.user %}
     <div class="nav-left">
-        <img class="logo_small" src=" {{asset('build/images/lock.gif')}}">
+        <img class="logo_small" src=" {{asset('images/lock.gif')}}">
       <div class="dropdown"><a href="/">Bonjour <b>{{ app.user.username }}</b> </a>
         <div>
         <a href="{{ path('user_show',{'id': app.user.id}) }}">Mes informations</a>
