--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form,{'attr': {'id': 'adduserForm'}}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn" id='adduser'>{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
