--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,10 @@
 {{ form_start(form,{'attr': {'id': 'adduserForm'}}) }}
-    {{ form_widget(form) }}
-    <button class="btn" id='adduser'>{{ button_label|default('Save') }}</button>
+
+  <div class="heading">
+<label>Add new Member</label>
+</div>
+{{ form_widget(form.username,{'attr': {'placeholder': 'username'}}) }}
+  {{ form_widget(form.email,{'attr': {'placeholder': 'Email'}}) }}
+
+  <button class="btn" id='adduser'>{{ button_label|default('+') }}</button>
 {{ form_end(form) }}
