--- a/assets/sass/layout/_forms.scss
+++ b/assets/sass/layout/_forms.scss
@@ -2,7 +2,6 @@ form {
   padding: 20px;
   display: flex;
   flex-flow: column;
-
   margin: 0 auto;
 
   label {
@@ -41,23 +40,26 @@ form {
     width: 100%;
     height: 15px;
     margin-bottom: 20px;
-
   }
-.password_input{
-  position: relative;
-    input[type='password'],input[type='text']{
+
+  .password_input {
+    position: relative;
+
+    input[type='password'],
+    input[type='text'] {
       width: calc(100% - 30px);
       margin-bottom: 0;
     }
-  input[type='checkbox']{
-    width: 20px;
-    background-position: right;
-    position: relative;
 
-    left: 47%;
-    bottom: 26px;
+    input[type='checkbox'] {
+      width: 20px;
+      background-position: right;
+      position: relative;
+      left: 47%;
+      bottom: 26px;
+    }
   }
-}
+
   .weakbar {
     background: linear-gradient(to right, red 50%, white 50%);
     background-size: 200% 100%;
@@ -80,34 +82,46 @@ form {
   0% {
     background-position: right bottom;
   }
+
   100% {
     background-position: left bottom;
   }
 }
 /* The Modal (background) */
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0,0,0);
+  /* Fallback color */
+  background-color: rgba(0,0,0,0.4);
+  /* Black w/ opacity */
 }
-
 /* Modal Content/Box */
+
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
+  /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;
+  /* Could be more or less, depending on screen size */
 }
-
 /* The Close Button */
+
 .close {
   color: #aaa;
   float: right;
@@ -115,121 +129,154 @@ form {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:focus,
+.close:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
-#searchform{
-  width:350px;
+
+#searchform {
+  width:100%;
   margin: 0 auto;
-  input[type='search']{
+
+  input[type='search'] {
     width: 100%;
-    margin-bottom: 0px;
-    padding: 10px;
+    margin-bottom: 0;
+    padding: 10px 0;
   }
-  #users_results{
-    #adduserForm{
+
+  #users_results {
+    #adduserForm {
       padding: 20px 0;
-      input{
-        margin-bottom: 0px;
-        padding: 10px;
+
+      input {
+
+        margin-bottom: 0;
+        padding: 10px 0;
       }
-      button{
+
+
+      button {
+        width: 50%;
         background-color: #eeeeee;
-        border:1px solid black;
-        color:black;
+        border: 1px solid black;
+        color: black;
+        margin-top: 20px;
       }
     }
-    .hide{
+
+    .hide {
       display: none;
     }
-    .userItem{
+
+    .userItem {
       display: flex;
       align-items: center;
       text-align: left;
       margin: 10px 0;
-      border:1px solid #eeeeee;
+      border: 1px solid #eeeeee;
       padding: 10px;
-      &:hover{
-        background:black;
-        color:white;
 
+      &:hover {
+        background: black;
+        color: white;
       }
-
-      span{
+      input[type="checkbox"]{display: none;}
+      span {
         cursor: pointer;
         padding-left: 10px;
         display: flex;
         flex-flow: column;
       }
-      select{display: none;}
+
+      select {
+        display: none;
+      }
     }
   }
 }
-#form_crew{
-  max-width: 780px;
+textarea:focus, input:focus{
+    outline: none;
+}
+#form_crew {
+  max-width: 640px;
   margin: 0 auto;
+  width: 100%;
   text-align: left;
-  display: flex;
-  flex-flow: row;
-  padding: 0px;
+  padding: 0;
   justify-content: space-between;
-  >div{
-    width: 350px;
-  
+  input{
+    border:none;
+    font-size: 18px;
+    border-bottom: 1px solid lightgrey;
+
   }
-    button[type='submit']{
-      width: 100%;
-      margin-top: 10px;
-    }
-  input[type='text']{
 
 
-    padding: 10px;
+  button[type='submit'] {
+    width: 50%;
+    margin-top: 40px;
+    background: black;
   }
-  .heading{
-    background:#eeeeee;
-    border:1px solid #eeeeee;
-    padding: 10px;
+
+  input[type='text'] {
+  padding: 10px 0;
+    width: 100%;
+  }
+
+  .heading {
+  color:black;
+
+  padding: 0px;
+  font-weight: bold;
+  label{
+      font-size:18px;
+  }
   }
 }
-#crew_users{
-  max-width: 550px;
+
+#crew_users {
+
   width: 100%;
   margin: 0 auto;
   text-align: left;
-    .userItem{
-      display: flex;
-      align-items: center;
-      text-align: left;
-      margin: 10px 0;
-      border:1px solid #eeeeee;
-      padding: 10px;
-      &:hover{
-        background:black;
-        color:white;
+  background: #f7f7f7;
+  .userItem {
+    display: flex;
+    align-items: center;
+    text-align: left;
 
-      }
-      input[type="checkbox"]{
-        margin: 0;
-      }
-      span{
-        label{
-          margin-bottom: 0px;
-          text-transform: none;
-          font-size: 14px;
-        }
-        text-align: left;
-        align-items: flex-start;
-        cursor: pointer;
-        padding-left: 10px;
-        flex-grow: 2;
-        display: flex;
-        flex-flow: column;
-      }
+    border: 1px solid #eeeeee;
+    padding: 10px;
 
+    &:hover {
+      background: black;
+      color: white;
     }
 
+    input[type="checkbox"] {
+      margin: 0;
+    }
+
+    span {
+      label {
+        margin-bottom: 0;
+        text-transform: none;
+        font-size: 18px;
+        font-weight: bold;
+        &:last-child{
+          font-weight: normal;
+          font-size: 16px;
+        }
+      }
+      text-align: left;
+      align-items: flex-start;
+      cursor: pointer;
+      padding-left: 10px;
+      flex-grow: 2;
+      display: flex;
+      flex-flow: column;
+    }
+  }
 }
