--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-  
+
     {{ include('user/_form.html.twig') }}
 
 
@@ -52,14 +52,19 @@ console.log(form_data)
 
           // handling the response data from the controller
           if(data.status == 'error'){
-            console.log("[API] ERROR: "+data.message);
+            console.log("[API] ERROR: "+data.message );
           }
           if(data.status == 'success'){
-            console.log("[API] SUCCESS: "+data.message);
+            console.log("[API] SUCCESS: "+data.message+data.userId);
+            $('#crew_users').append('<div class="userItem" >\
+            <input type="checkbox" id="crew_users_'+data.userId+'" name="crew[users][]" value="'+data.userId+'" checked>\
+            <span><label for="crew_users_'+data.userId+'">'+data.username+'</label>\
+            <label for="crew_users_'+data.userId+'">'+data.useremail+'</label></span>\
+            <select><option value="test" data-crew="'+currentId+'" data-user="'+data.userId+'">test</option>\
+            <option value="other" data-crew="'+currentId+'" data-user="'+data.userId+'">other</option></select></div>');
           }
+          $('#createNew').addClass('hide');
 
-          // signal to user the action is done
-        //  $('#loadingSpinner').hide();
           $('#adduser').attr("disabled",false);
         }
       });
