--- a/assets/sass/layout/_forms.scss
+++ b/assets/sass/layout/_forms.scss
@@ -242,7 +242,7 @@ textarea:focus, input:focus{
   margin: 0 auto;
   text-align: left;
   background: #f7f7f7;
-  .userItem {
+  .userItem,.userItemadmin {
     display: flex;
     align-items: center;
     text-align: left;
