--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-  <img class="logo" src=" {{asset('images/lock.gif')}}">
+  <img class="logo" src=" {{asset('images/tourmanager.png')}}">
 
 <form id='login' action="{{ path("fos_user_security_check") }}" method="post">
 
